# agent-email-summarizer

./: .gitignore  Makefile  README.md  generate_token.py  logging.yaml  post_generation_setup.sh  pyproject.toml  run_locally.sh  setup_env.sh  setup_pulumi.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml  promote.yml
agent_skills/: AGENT_CONFIG.json  AGENT_INSTRUCTIONS.md  AGENT_PURPOSE.md
app/: .env.example  .npmrc  Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup_env.sh  staticwebapp.config.json  tsconfig.json  vite.config.ts
app/patches/: @tanstack__react-store@0.9.2.patch
app/src/: env.ts  routeTree.gen.ts  router.tsx  styles.css
app/src/components/: app-sidebar.tsx  user-profile.tsx
app/src/functions/: auth.ts  config.ts
app/src/hooks/: use-app-session.ts  use-config.ts  use-logout.ts  use-user.ts
app/src/integrations/: context.ts
app/src/integrations/azure/: database-client.ts  file-client.ts  index.ts
app/src/integrations/azure/services/: db-token-service.ts  file-token-service.ts
app/src/integrations/tanstack-query/: root-provider.tsx
app/src/integrations/trpc/: init.server.ts  react.ts  router.server.ts
app/src/integrations/trpc/routers/: agents.ts  emails.ts  stats.ts  workflows.ts
app/src/middleware/: auth.ts
app/src/routes/: __root.tsx  _authed.tsx  api.trpc.$.tsx  index.tsx  ping.tsx
app/src/routes/_authed/: dashboard.tsx  email-history.tsx
app/src/types/: config.ts  index.ts
deploy/: Chart.yaml
deploy-app/: Chart.yaml  values.yaml
deploy-app/templates/: _helpers.tpl  deployment.yaml  healthcheckpolicy.yaml  httproute.yaml  namespace.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml
deploy-app/vars/: prod-europe.yaml  prod-india.yaml  prod.yaml  staging.yaml
deploy/templates/: _helpers.tpl  serviceaccount.yaml  trigger_authentication.yaml
deploy/templates/summarize_email/: summarize_email_deployment.yaml  summarize_email_scaler.yaml
deploy/vars/: prod-eu.yaml  prod-india.yaml  prod.yaml  staging.yaml
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
reviews/: artifacts_review.md  implementation_review.md
workflows/summarize_email/: Dockerfile  entrypoint.sh  pyproject.toml
workflows/summarize_email/src/summarize_email/: startup_validation.py  summarize_email_runner.py  summarize_email_workflow.py  worker.py
workflows/summarize_email/src/summarize_email/activities/: fetch_email.py  generate_summary.py  get_agent.py  save_summary.py  send_reply.py
workflows/summarize_email/src/summarize_email/models/: workflow_models.py
workflows/summarize_email/src/summarize_email/prompts/: config.json  system.md  user.jinja
workflows/summarize_email/tests/: conftest.py
workflows/summarize_email/tests/integration/: test_summarize_email_workflow.py
workflows/summarize_email/tests/unit/: test_summarize_email_workflow.py
