[project]
name = "agent-email-summarizer-infra"
version = "0.1.0"
description = "Receives emails, generates AI summaries of the email body and attachments, persists summaries to the database, and replies to the sender with the summary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-keyvault>=4.2.0",
    "pulumi>=3.246.0",
    "pulumi-azure>=6.22.0",
    "pulumi-azure-native>=3.10.2",
    "pulumi-azuread>=6.7.0",
    "pulumi-random>=4.18.4",
]
