[project]
name = "summarize_email"
version = "0.1.0"
description = "Email Summarizer summarize_email"
requires-python = ">=3.12"
dependencies = [
    "common",  # Provides: temporalio, pydantic, httpx - DO NOT add these explicitly!
    "common_activities",
    "database_client",
    "file_client",
    "python-docx>=1.1.2",
    "black>=25.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/summarize_email"]
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

# Uncomment these lines to enable imports from those workflows
# [tool.uv.sources]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Speed up test collection
norecursedirs = [".git", ".venv", "__pycache__", "*.egg", "htmlcov"]
# Show test duration for slow tests
addopts = "-v --durations=10"
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (slower, may require external services)",
]
